i dont know jaki opis dac i tak to tylko for me thx

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,9 @@
 @import "style.scss";
 @import "var.scss";
 @import "grid.scss";
-
+@import "footer.scss";
+@import "navbar.scss";
+@import "about.scss";
 html,
 body {
   font-family: "Vesper Libre", serif;
