--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "style.scss";
 @import "var.scss";
 @import "grid.scss";
+@import "gridMobile.scss";
 @import "footer.scss";
 @import "navbar.scss";
 @import "about.scss";
