--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -1,24 +1,44 @@
 @import "var.scss";
+#navbar {
+  width: 100vw;
+  background-color: rgb(65, 65, 65);
+  border-bottom: 2px solid $addColor;
+  background-color: #333;
+  font-size: 18px;
+  padding: 16px 0;
+}
+ul {
+  list-style-type: none;
+  overflow: hidden;
+}
+li {
+  float: left;
+}
 
 //NAV
-#navbar {
-    width: 100vw;
-    background-color: rgb(65, 65, 65);
-    border-bottom: 2px solid $addColor;
-    background-color: #333;
-    font-size: 18px;
-    padding: 16px 0;
+@media screen and (max-width: 768px) {
+  ul {
+    list-style-type: none;
+    overflow: hidden;
   }
+  li {
+    float: left;
+  }
+  #navbar ul{
+    display: none;
+  }
+}
+@media screen and (min-width: 1170px) {
   ul {
     list-style-type: none;
     margin: 0 0 0 400px;
     overflow: hidden;
   }
-  
+
   li {
     float: left;
   }
-  
+
   li a {
     text-transform: uppercase;
     display: block;
@@ -28,9 +48,10 @@
     text-decoration: none;
     transform: 1s;
   }
-  
+
   /* Change the link color to #111 (black) on hover */
   li a:hover {
     transition: 0.6s;
     color: $textColor;
   }
+}
