--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-  transition: 0.6s;
+  //transition: 0.6s;
   color: $textColor;
 }
 .content {
