--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,7 +88,10 @@ img {
 }
 .footer {
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   color: white;
   text-align: center;
+}
+a{
+  color: white;
 }
